mobile: menu: trying to fix weird button rounding on safari

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -9,6 +9,8 @@ body {
 
 }
 
+main {width:100%;}
+
 
 
 /* mobile version */
